--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,103 +26,11 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
-    <EditText
-        android:id="@+id/et_search_ingr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="240dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="@string/hint_search_ingr"
-        android:inputType="text"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/btn_add_ingr"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp" />
-
-    <Button
-        android:id="@+id/btn_add_ingr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
-        android:onClick="addIngredient"
-        android:text="@string/btn_add_ingr"
-        app:layout_constraintBaseline_toBaselineOf="@+id/et_search_ingr"
-        app:layout_constraintLeft_toRightOf="@+id/et_search_ingr"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp" />
-
-    <Button
-        android:id="@+id/btn_ingr_categories"
-        android:layout_width="156dp"
-        android:layout_height="60dp"
-        android:text="Ingredient Categories"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="210dp"
-        app:layout_constraintHorizontal_bias="0.083" />
-
-    <Button
-        android:id="@+id/btn_saved_recipes"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:onClick="displaySavedRecipe"
-        android:text="Saved Recipes"
-        app:layout_constraintBottom_toTopOf="@+id/btn_recent_searches"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1" />
-
-    <Button
-        android:id="@+id/btn_saved_ingr"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:onClick="displaySavedIngredients"
-        android:text="Saved Ingredients"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_saved_recipes" />
-
-    <Button
-        android:id="@+id/btn_recent_searches"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="Recent Searches"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <Button
-        android:id="@+id/btn_add_recipe"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:text="Add Recipe"
-        app:layout_constraintHorizontal_bias="0.928"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_recent_searches" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="114dp"
         android:gravity="center"
         android:text="Please make a selection below"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -131,27 +39,98 @@
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="114dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_search"
+        app:layout_constraintTop_toTopOf="@+id/tv_search"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/tv_search"
+        android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/btn_ingr_categories"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="Ingredient Categories"
+        app:layout_constraintBottom_toTopOf="@+id/btn_saved_recipes"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp" />
+
+    <Button
+        android:id="@+id/btn_saved_recipes"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="displaySavedRecipe"
+        android:text="Saved Recipes"
+        app:layout_constraintBottom_toTopOf="@+id/btn_recent_searches"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp" />
+
+    <Button
+        android:id="@+id/btn_saved_ingr"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="displaySavedIngredients"
+        android:text="Saved Ingredients"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add_recipe"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp" />
+
+    <Button
+        android:id="@+id/btn_recent_searches"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Recent Searches"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/btn_add_recipe"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Add Recipe"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btn_add_ing"
-        android:layout_width="141dp"
-        android:layout_height="62dp"
-        android:layout_marginBottom="47dp"
-        android:layout_marginTop="58dp"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
         android:text="Add Ingredient"
         app:layout_constraintBottom_toTopOf="@+id/btn_saved_ingr"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_add_ingr"
-        app:layout_constraintRight_toLeftOf="@+id/btn_add_ingr"
-        app:layout_constraintTop_toTopOf="@+id/btn_add_ingr"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/tv_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/tv_search"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="29dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </android.support.constraint.ConstraintLayout>
