--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -19,7 +19,22 @@
         android:layout_alignParentStart="true"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <TextView
+        android:id="@+id/queryResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Result..."
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="39dp" />
 
     <TextView
         android:id="@+id/tv_result"
