--- a/app/src/main/res/layout/activity_personal_recipe.xml
+++ b/app/src/main/res/layout/activity_personal_recipe.xml
@@ -10,23 +10,10 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="368dp"
-        android:layout_height="56dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintRight_toRightOf="parent"
-        app:popupTheme="@style/Theme.AppCompat.Light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <ProgressBar
         android:id="@+id/progressUpload"
@@ -76,23 +63,6 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/ing_field" />
 
-    <Button
-        android:id="@+id/firebase_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="saveRecipe"
-        android:text="Save"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="17dp"
-        app:layout_constraintRight_toRightOf="@+id/pic_btn"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/instr_field"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/pic_btn" />
-
     <EditText
         android:id="@+id/ing_field"
         android:layout_width="wrap_content"
@@ -110,6 +80,23 @@
         app:layout_constraintTop_toBottomOf="@+id/name_field"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/name_field" />
+
+    <Button
+        android:id="@+id/firebase_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="saveRecipe"
+        android:text="Save"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="17dp"
+        app:layout_constraintRight_toRightOf="@+id/pic_btn"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/instr_field"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/pic_btn" />
 
     <Button
         android:id="@+id/pic_btn"
