--- a/app/src/main/res/layout/activity_ingredient_list.xml
+++ b/app/src/main/res/layout/activity_ingredient_list.xml
@@ -103,6 +103,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_tap_remove" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_tap_remove"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
