--- a/app/src/main/res/layout/activity_ingredient_list.xml
+++ b/app/src/main/res/layout/activity_ingredient_list.xml
@@ -30,22 +30,22 @@
         android:layout_marginStart="8dp"
         android:onClick="clearList"
         android:text="@string/btn_clear_list"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_find_recipes"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_search"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/btn_find_recipes" />
+        app:layout_constraintRight_toLeftOf="@+id/btn_search" />
 
     <Button
-        android:id="@+id/btn_find_recipes"
+        android:id="@+id/btn_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="findRecipes"
-        android:text="@string/btn_find_recipes"
-        app:layout_constraintLeft_toRightOf="@+id/btn_clear_list"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="15dp"
+        android:onClick="search"
+        android:text="@string/btn_search"
+        app:layout_constraintLeft_toRightOf="@+id/btn_clear_list"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
         android:id="@+id/et_search_ingr"
